--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -12,9 +12,8 @@
   </div>
   <div class="content-fcs_show">
     <div class="text-format text-danger mt-5 mb-5">
-      <i class="fas fa-fire"></i>
-      試合予想<br><br>
-      <%= @forecast.tournament.name%>
+      <%= @forecast.tournament.name%><br>
+      <i class="fas fa-fire mt-5">試合予想</i>
     </div>
     <div class="school-fcs">
       <div class="win-school text-danger">
