--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -10,8 +10,8 @@
   <div class="user_name">
     <h4>投稿者 <%= link_to "#{@analysis.user.nickname}","/mypages/#{@analysis.user_id}"%></h4>
   </div>
-  <div class="content-fcs_show text-success">
-    <div class="text-format mt-5">
+  <div class="content-fcs_show">
+    <div class="text-format mt-5 text-success">
       <%= @analysis.tournament.name%><br>
       <i class="fas fa-search mt-5">分析内容</i>
     </div>
