--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -21,11 +21,25 @@
         <p>自己紹介</p>
         <br><%= @mypage.text %>
       </div>
-      <div class="my-links">
-          <%= link_to "投稿した試合記事","#{@mypage.user_id}/my_tweets",class: "my-link" %>
-          <%= link_to "投稿した戦力分析","#{@mypage.user_id}/my_analyses",class: "my-link" %>
-          <%= link_to "投稿した試合予想","#{@mypage.user_id}/my_forecasts",class: "my-link" %>
-          <%= link_to "いいねした試合記事","/users/#{@mypage.user_id}/likes",class: "my-link"%>
+      <div id="radio">
+        <div class="vue_radio">
+          <div class="tabs">
+            <input type="radio" id="tab1" name="tab" value="1" v-model="isActive">
+            <label for="tab1">投稿した試合記事</label>
+            <input type="radio" id="tab2" name="tab" value="2" v-model="isActive">
+            <label for="tab2">投稿した試合分析</label>
+            <input type="radio" id="tab3" name="tab" value="3" v-model="isActive">
+            <label for="tab3">投稿した試合予想</label>
+            <input type="radio" id="tab4" name="tab" value="4" v-model="isActive">
+            <label for="tab4">いいねした試合記事</label>
+          </div>
+          <ul class="contents">
+            <li v-if="isActive === '1' "><%= render partial: "tweets/tweet_show"%></li>
+            <li v-else-if="isActive === '2' "><%= render partial: "analyses/show" %></li>
+            <li v-else-if="isActive === '3' "><%= render partial: "forecasts/forecasts"%></li>
+            <Li v-else-if="isActive === '4' "><%= render partial: "users/likes"%></li>
+          </ul>
+        </div>
       </div>
     </div>
   <% end %>
@@ -49,4 +63,4 @@
   <% end %>
   <%= render "users/follow_form" %>
 </div>
-  
+<%= javascript_pack_tag 'mypage' %>
