--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -57,3 +57,18 @@
   margin-top: 20px;
   text-align: center;
 }
+
+.tab {
+  color: White;
+  background: rgb(184, 183, 183);
+  margin-right: 5px;
+  padding: 3px 12px;
+  order: -1;
+  &-switch {
+    display: none;
+  }
+}
+
+.tab-switch:checked + .tab {
+  background: DeepSkyBlue;
+}
