--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,5 +1,5 @@
 <% unless current_user?(@user) %>
-  <div id="follow_form">
+  <div class="follow_form mt-2">
   <% if current_user.following?(@user) %>
     <%= render 'users/unfollow' %>
   <% else %>
