--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -9,7 +9,7 @@
           高校野球コネクト
         </div>
           <li>
-          <%= link_to tweets_path,class: "btn btn-cool-blues",data: {"turbolinks" => false} do %>
+          <%= link_to tweets_path,class: "btn btn-cool-blues" do %>
             <i class="fas fa-edit"></i>試合記事
           <% end %>
           </li>
