--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -9,7 +9,7 @@
     <%= render partial: 'form',locals: {f: f} %>
     <% end %>
     <div class="back">
-      <%= link_to "戻る",tweets_path,data: {"turbolinks" => false} %>
+      <%= link_to "戻る",tweets_path %>
     </div>
   </div>
 </div>
