--- a/app/views/users/_likes.html.erb
+++ b/app/views/users/_likes.html.erb
@@ -1,4 +1,4 @@
-<div class="text-format mb-5 text-warning">
+<div class="text-format mb-5 pt-5 text-warning">
   いいねした試合記事
 </div>
 <% @likes.each do |like|%>
