--- a/app/views/tournaments/watch_ays.html.erb
+++ b/app/views/tournaments/watch_ays.html.erb
@@ -5,7 +5,7 @@
       <%= link_to "投稿する",new_analysis_path,class: "send_btn"%>
     <% end %>
     <% unless current_page?(root_path)%>
-      <%= link_to "分析一覧へ戻る",analyses_path,class: "return-btn_watch",data: {"turbolinks" => false} %>
+      <%= link_to "分析一覧へ戻る",analyses_path,class: "return-btn_watch" %>
     <%end%>
   </div>
   <div class="go-avg">
