--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -9,7 +9,7 @@
       <%= render partial: "analysis",locals:{f: f} %>
     <%end%>
       <div class="back">
-        <%= link_to "戻る",analyses_path,data: {"turbolinks" => false} %>
+        <%= link_to "戻る",analyses_path %>
       </div>
   </div>
 </div>
