--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -14,7 +14,7 @@
           <% end %>
           </li>
           <li>
-          <%= link_to analyses_path,class: "btn btn-green-moon",data: {"turbolinks" => false}  do %>
+          <%= link_to analyses_path,class: "btn btn-green-moon"  do %>
             <i class="fas fa-search"></i>戦力分析
           <% end %>
           </li>
