予想　ターボリンクス

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -18,7 +18,7 @@
             <i class="fas fa-search"></i>戦力分析
           <% end %>
           </li>
-          <%= link_to forecasts_path,class: "btn btn-orange-moon",data: {"turbolinks" => false}  do %>
+          <%= link_to forecasts_path,class: "btn btn-orange-moon" do %>
             <i class="fas fa-baseball-ball"></i>試合予想
           <% end %>
         </div>
