フォロー　フォロワー

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
  @import "./top";
  @import "./contact";
  @import "./notification";
- @import "./tournament"
+ @import "./tournament";
+ @import "./follow";
 
 
