--- a/app/views/tweets/_header.html.erb
+++ b/app/views/tweets/_header.html.erb
@@ -5,7 +5,7 @@
     <% end %>
     <% if unchecked_notifications.any? %>
       <%= link_to notifications_path, class: "new_info" do %>
-        <i class="fa fa-circle fa-xs" style="color: gold;"></i>新着あり
+        <i class="fa fa-circle fa-xs" style="color: gold;">新着あり</i>
       <% end %>
     <% end %>
   <% end %>
