--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -15,6 +15,10 @@
       <%= @analysis.tournament.name%><br>
       <i class="fas fa-search mt-5">分析内容</i>
     </div>
+  <div class="sub_title bg-success text-white mt-5">
+    <i class="fa fa-baseball-ball"></i>
+    <%=@analysis.title%>
+  </div>
     <div class="school_name-ays">
       <%= @analysis.school.name %>
     </div>
