--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -40,6 +40,7 @@
       <%= javascript_pack_tag 'analysis' %>
   </div>
   <div class="show-text">
+    <div class="text-center"><分析内容></div>
     <%= simple_format(@analysis.text)%>
   </div>
    <div class="comment-content">
