戻るボタン　１画面前

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -28,7 +28,7 @@
       </div>
       <div class="contact-sent mt-5">
         <%= f.submit "確認画面へ",class: "btn btn-warning" %>
-        <%= link_to root_path,class: "btn btn-primary active" do %>
+        <%= link_to 'javascript:history.back()',class: "btn btn-primary active" do %>
         戻る
         <% end %>
       </div>
