--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: "tweets/header"%>
 <div class="mypage-content pt-3">
-  <%= link_to "トップページへ戻る",root_path,class: "return-top ml-2" %>
+  <%= link_to "戻る",'javascript:history.back()',class: "return-top ml-2" %>
   <% if @user.id == current_user.id  && @mypage.blank? %>
     <%= link_to "プロフィール作成",new_mypage_path,class: "edit-article" %>
   <% elsif @mypage.blank? %>
