投稿してない場合

--- a/app/views/tournaments/watch_ays.html.erb
+++ b/app/views/tournaments/watch_ays.html.erb
@@ -20,7 +20,7 @@
       </div>
       <%= render partial: "analyses/show"%>
     <% else %>
-      <p class="text-center mt-5">投稿はありません</p>
+      <div class="text-center mt-5">投稿はありません</div>
     <% end %>
     <%= paginate(@analyses)%>
   </div>
