--- a/app/views/tournaments/watch_avg.html.erb
+++ b/app/views/tournaments/watch_avg.html.erb
@@ -19,3 +19,6 @@
   </div>
   <%= javascript_pack_tag 'tournament' %>
 <% end %>
+<% unless @avgs.present? %>
+<div class="text-center mt-5">投稿はありません</div>
+<% end %>
