分析　予想　詳細ページ

--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -110,6 +110,13 @@
   margin-top: 130px;
 }
 
-.text-show {
-  margin-top: 100px;
+.ays-text {
+  margin-top: 40px;
+  border: 1px solid #b3b4b4;
+  width: 100%;
+}
+
+.reader {
+  margin-top: 110px;
+  display: flex;
 }
