--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -99,19 +99,19 @@
   }
   &_two {
     top: 100px;
-    left: 730px;
+    left: 49%;
     position: absolute;
     z-index: 0;
   }
   &_three {
     top: 120px;
-    left: 350px;
+    left: 25%;
     position: absolute;
     z-index: 0;
   }
   &_four {
     top: 370px;
-    left: 960px;
+    left: 57%;
     position: absolute;
     z-index: 0;
   }
@@ -123,7 +123,7 @@
   }
   &_six {
     top: 100px;
-    left: 1100px;
+    left: 73%;
     position: absolute;
     z-index: 0;
   }
