--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -15,12 +15,14 @@
   <div class="text-format mt-5 mb-4 text-warning">
     大会別
   </div>
-  <% @category_parent_array.each do |tournament|%>
-    <%= link_to "/tournaments/#{tournament.id}/watch_ays",class: "title text-white" do%>
-      <i class="fa fa-baseball-ball text-white"></i>
-      <%=tournament.name%>
+  <div class="title">
+    <% @category_parent_array.each do |tournament|%>
+      <%= link_to "/tournaments/#{tournament.id}/watch_ays",class: "title-child text-white" do%>
+        <i class="fa fa-baseball-ball text-white"></i>
+        <%=tournament.name%>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
   <div class="analysis-main">
     <%= render partial: "analyses/show"%>
     <%= paginate(@analyses)%>
