--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -15,12 +15,14 @@
   <div class="text-format mt-5 mb-4 text-warning">
     大会別
   </div>
-  <% @category_parent_array.each do |tournament|%>
-    <%= link_to "/tournaments/#{tournament.id}",class: "title text-white" do%>
-      <i class="fa fa-baseball-ball text-white"></i>
-      <%=tournament.name%>
+  <div class="title">
+    <% @category_parent_array.each do |tournament|%>
+      <%= link_to "/tournaments/#{tournament.id}",class: "title-child text-white" do%>
+        <i class="fa fa-baseball-ball text-white"></i>
+        <%=tournament.name%>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
   <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search mt-5 mb-5") do |form| %>
     <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
     <%= form.submit "検索", class: "search-btn" %>
