--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -57,11 +57,11 @@
   position: absolute;
 }
 
-.mx-auto {
+.menu {
   list-style: none;
   position: absolute;
-  bottom: 0;
   left: 35%;
+  bottom: 0;
 }
 
 .btn-cool-blues {
