--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -25,6 +25,8 @@
 
 .main-content {
   background-color: rgba(236, 236, 206,0.4);
+  position: relative;
+  // height: 100%;
   &-btn{
     display: flex;
   }
@@ -46,7 +48,6 @@
 }
 
 .article {
-  position: relative;
   margin-top: 70px;
   background-color: #68ccf9;
   text-align: center;
@@ -67,7 +68,10 @@
     opacity: 0.7;
   }
   &-main {
+    // position: absolute;
+    // bottom: 0;
     padding: 0 250px;
+    width: 100%;
     background-image: url("sky_00010.jpg");
     background-size: cover;
     background-color:rgba(255,255,255,0.8);
@@ -105,7 +109,7 @@
 
 .pagination {
   font-size: 20px;
-  margin-left: 45%;
+  margin-left: 42%;
   margin-top: 30px;
   color: red;
   letter-spacing: 0.15em;
