--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,27 +1,28 @@
+<%= render partial: "/tweets/header"%>
 <div class="top-main">
-    <%= render partial: "/tweets/header"%>
   <div id="app">
-    <transition name="bounce" appear>
     <div v-show="show">
       <div class="top-container">
-        <div class="mx-auto" style="width: 40%;">
-          <div class="top-title font-weight-bold">
-            高校野球コネクト
+        <transition name="bounce" appear>
+          <div class="menu">
+            <div class="top-title font-weight-bold">
+              高校野球コネクト
+            </div>
+            <li>
+            <%= link_to tweets_path,class: "btn btn-cool-blues" do %>
+              <i class="fas fa-edit"></i>試合記事
+            <% end %>
+            </li>
+            <li>
+            <%= link_to analyses_path,class: "btn btn-green-moon"  do %>
+              <i class="fas fa-search"></i>戦力分析
+            <% end %>
+            </li>
+            <%= link_to forecasts_path,class: "btn btn-orange-moon" do %>
+              <i class="fas fa-baseball-ball"></i>試合予想
+            <% end %>
           </div>
-          <li>
-          <%= link_to tweets_path,class: "btn btn-cool-blues" do %>
-            <i class="fas fa-edit"></i>試合記事
-          <% end %>
-          </li>
-          <li>
-          <%= link_to analyses_path,class: "btn btn-green-moon"  do %>
-            <i class="fas fa-search"></i>戦力分析
-          <% end %>
-          </li>
-          <%= link_to forecasts_path,class: "btn btn-orange-moon" do %>
-            <i class="fas fa-baseball-ball"></i>試合予想
-          <% end %>
-        </div>
+        </transition>
         <div class="top-image_one">
           <%= image_tag "run.png",width: '300',height: '300' %>
         </div>
@@ -42,7 +43,6 @@
         </div>
       </div>
     </div>
-    </transition>
   </div>
 </div>
 <%= javascript_pack_tag 'top' %>
