記事　分析　予想　高さ

--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -1,7 +1,8 @@
 .analysis-main {
   padding: 0 250px;
   width: 100%;
-  background-image: url("photo0000-0331.jpg");
+  height: 1500px;
+  background-image: image-url("photo0000-0331.jpg");
   background-size: cover;
   background-color:#ffffff80;
   background-blend-mode:lighten;
