--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -27,11 +27,11 @@
 
 .forecasts-main {
   padding: 0 250px;
-  background-image: url("sky_00148.jpg");
+  background-image: image-url("sky_00148.jpg");
   background-size: cover;
   background-color:rgba(255,255,255,0.5);
   background-blend-mode:lighten;
-  height: 100%;
+  height: 1500px;
   flex: 1 1 100%;
 }
 
