--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -1,5 +1,6 @@
 /* トップ画面 */
-*{box-sizing: border-box;}
+*{box-sizing: border-box;
+}
 .header,.analysis_header {
   font-size: 40px;
   height: 300px;
@@ -70,14 +71,18 @@
   &-main {
     // position: absolute;
     // bottom: 0;
+    height: calc(100%-40%);
     padding: 0 250px;
     width: 100%;
-    background-image: url("sky_00010.jpg");
+    background-image: image-url("sky_00010.jpg");
     background-size: cover;
     background-color:rgba(255,255,255,0.8);
     background-blend-mode:lighten;
     flex: 1 1 100%;
   }
+}
+.center {
+  height: 300px
 }
 
 .title {
