--- a/app/assets/stylesheets/resert.scss
+++ b/app/assets/stylesheets/resert.scss
@@ -42,6 +42,12 @@ h1 {
 	color: white;
 	}
 
+h2 {
+	margin: 10px 0;
+	text-align: center;
+	font-size: 25px;
+}
+
 body > .box {
 	height: auto;
 	}
