--- a/app/assets/stylesheets/tournament.scss
+++ b/app/assets/stylesheets/tournament.scss
@@ -26,3 +26,18 @@
   margin-left:  30px;
   display: inline-block;
 }
+
+@media screen and (max-width: 679px) {
+  .article-image {
+    position: static;
+  }
+  .name {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 680px) {
+  .article-image {
+    position: absolute;
+  }
+}
