--- a/app/views/tournaments/watch_ays.html.erb
+++ b/app/views/tournaments/watch_ays.html.erb
@@ -8,7 +8,7 @@
       <%= link_to "分析一覧へ戻る",analyses_path,class: "return-btn_watch" %>
     <%end%>
   </div>
-  <div class="go-avg">
+  <div class="go-avg text-center mt-4">
     <%=@analysis.name%><br>
     <%= link_to "平均評価を見る",watch_avg_tournament_path,class: "ays-avg" %>
     <p>みんなの集計結果を元にした平均評価を見れます<p>
