--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -7,17 +7,17 @@
 </div>
 <% @analyses.each do |analysis|%>
   <%= link_to analysis do %>
-  <div class="content_anali">
+  <div class="content_anali mt-5">
     <div class="school_ays-name">
       <%= analysis.school.name %>
     </div>
-    <div class="content_anali-image mt-4">
+    <div class="content_anali-image fa-lg mt-3">
       <i class="fas fa-search"></i>
     </div>
-    <div class="title_a text-center">
+    <div class="title_ays text-center">
       <%= analysis.title%>
     </div>
-    <div class="name_ays mt-4">
+    <div class="name">
       <span>投稿者</span>
       <%= analysis.user.nickname %>
     </div>
