試合予想　レスポンシブ

--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -14,7 +14,7 @@
   background-image: url("https://pics.prcm.jp/d1c2e60537af9/78615919/jpeg/78615919.jpeg");
 }
 
-.content_anali {
+.analysis {
   width: 800px;
   max-width: 100%;
   margin: 0 auto;
@@ -84,11 +84,6 @@
   position: absolute;
   top: 20px;
   right: 50px;
-}
-
-.name_ays,.name-fcs {
-  text-align: right;
-  padding-bottom: 10px;
 }
 
 /* watch */
