--- a/app/views/forecasts/index.html.erb
+++ b/app/views/forecasts/index.html.erb
@@ -24,7 +24,7 @@
       <% end %>
     </div>
   </div>
-  <div class="forecasts-main">
+  <div class="forecast-main">
     <%= render partial: "forecasts/forecasts"%>
     <%= paginate(@forecasts)%>
   </div>
