--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -16,17 +16,20 @@
   font-size: 25px;
 }
 
-.content-fcs {
-  border: solid 1px rgb(255, 255, 255);
+.forecast {
   margin-top: 90px;
+  width: 800px;
+  max-width: 100%;
+  margin: 0 auto;
+  border: solid 1px rgb(255, 255, 255);
   background-color: #FFAD90;
+  position: relative;
   &:hover {
     opacity: 0.7;
   }
 }
 
-.forecasts-main {
-  padding: 0 250px;
+.forecast-main {
   background-image: image-url("sky_00148.jpg");
   background-size: cover;
   background-color:rgba(255,255,255,0.5);
@@ -47,4 +50,8 @@
 .fcs-text {
   width: 100%;
   border: 1px solid #b3b4b4;
+}
+
+.fcs-image {
+
 }
