--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -7,12 +7,12 @@
 </div>
 <% @analyses.each do |analysis|%>
   <%= link_to analysis do %>
-  <div class="content_anali mt-5">
+  <div class="analysis mt-5">
     <div class="school_ays-name">
       <%= analysis.school.name %>
     </div>
-    <div class="content_anali-image fa-lg mt-3">
-      <i class="fas fa-search"></i>
+    <div class="analysis-image">
+      <i class="fa fa-search"></i>
     </div>
     <div class="title_ays text-center">
       <%= analysis.title%>
