--- a/app/views/forecasts/_forecasts.html.erb
+++ b/app/views/forecasts/_forecasts.html.erb
@@ -7,7 +7,7 @@
 </div>
 <% @forecasts.each do |forecast| %>
   <%= link_to forecast do %>
-  <div class="content-fcs">
+  <div class="forecast mt-5">
     <div class="school-fcs">
       <div class="win-school_fs">
         <p>勝利予想<p>
@@ -20,7 +20,10 @@
         <%= forecast.lose_school.name %>
       </div>
     </div>
-    <div class="name-fcs">
+    <div class="fcs-image">
+      <i class="fa fa-balance-scale text-white"></i>
+    </div>
+    <div class="name">
       <span>投稿者</span>
       <%= forecast.user.nickname %>
     </div>
