--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -49,7 +49,6 @@
 }
 
 .article {
-  margin-top: 70px;
   width: 800px;
   max-width: 100%;
   margin: 0 auto;
@@ -73,7 +72,7 @@
     opacity: 0.7;
   }
   &-main {
-    height: calc(100%-40%);
+    height: 900px;
     width: 100%;
     background-image: image-url("sky_00010.jpg");
     background-size: cover;
@@ -81,9 +80,6 @@
     background-blend-mode:lighten;
     flex: 1 1 100%;
   }
-}
-.center {
-  height: 300px
 }
 
 .title {
@@ -136,16 +132,20 @@
   }
 }
 
-
 #wrapper,.contact,.notification-main {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 
+.wrap {
+  min-height: calc(100vh - 900px);
+}
+
 .fade-enter-active, .fade-leave-active {
   transition: all 1s ease;
 }
+
 .fade-enter, .fade-leave-to {
   opacity: 0;
 }
