--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,15 +1,16 @@
-<%= render partial: "header"%>
-<%= render partial: "slide/slide"%>
 <div class="main-content">
-  <div class="center">
-    <div class="main-content-btn pt-2">
-      <% if user_signed_in?%>
-        <%= link_to "投稿する", "/tweets/new" ,class: "send_btn"%>
-      <% end %>
-      <% unless current_page?(root_path)%>
-        <%= link_to "トップページへ戻る",root_path,class: "return-top" %>
-      <%end%>
-    </div>
+  <div class="wrap">
+    <%= render partial: "header"%>
+    <%= render partial: "slide/slide"%>
+    <div class="center">
+      <div class="main-content-btn pt-2">
+        <% if user_signed_in?%>
+          <%= link_to "投稿する", "/tweets/new" ,class: "send_btn"%>
+        <% end %>
+        <% unless current_page?(root_path)%>
+          <%= link_to "トップページへ戻る",root_path,class: "return-top" %>
+        <%end%>
+      </div>
       <div class="text-format mt-5 text-primary">
         観た試合の感想をみんなに発信してみましょう！
       </div>
@@ -28,6 +29,7 @@
         <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
         <%= form.submit "検索", class: "search-btn" %>
       <% end %>
+    </div>
   </div>
   <div class="article-main">
     <%= render partial: "tweet_show"%>
