--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -36,6 +36,7 @@
 
 .top-header {
   height: 70px;
+  width: 100%;
   position: relative;
   background-color: #003366;
   justify-content: space-between;
@@ -58,10 +59,14 @@
 }
 
 .menu {
-  list-style: none;
   position: absolute;
-  left: 35%;
+  left: 0;
+  right: 0;
   bottom: 0;
+  margin: auto;
+  max-width: 100%;
+  bottom: 0;
+  width: 35%;
 }
 
 .btn-cool-blues {
@@ -92,42 +97,78 @@
   position: relative;
 }
 
-.top-image {
-  // position: absolute;
-  &_one {
-    top: 12%;
-    left: 0;
-    position: absolute;
-    z-index: 0;
+@media screen and (min-width: 1200px) {
+  .top-image {
+    
+    &_one {
+      top: 12%;
+      left: 0;
+      position: absolute;
+      z-index: 0;
+      max-width: 100%;
+      height: auto;
+    }
+    &_two {
+      top: 12%;
+      left: 49%;
+      position: absolute;
+      z-index: 0;
+      max-width: 100%;
+      height: auto;
+    }
+    &_three {
+      top: 12%;
+      left: 25%;
+      position: absolute;
+      z-index: 0;
+      max-width: 100%;
+      height: auto;
+    }
+    &_four {
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      z-index: 0;
+      max-width: 100%;
+      height: auto;
+    }
+    &_five {
+      bottom: 0;
+      left: 0;
+      position: absolute;
+      z-index: 0;
+      max-width: 100%;
+      height: auto;
+    }
+    &_six {
+      top: 10%;
+      right: 0;
+      position: absolute;
+      z-index: 0;
+      max-width: 100%;
+      height: auto;
+    }
   }
-  &_two {
-    top: 12%;
-    left: 49%;
-    position: absolute;
-    z-index: 0;
+}
+
+
+@media screen and (max-width: 600px) {
+  .top-title {
+    font-size: 40px;
   }
-  &_three {
-    top: 12%;
-    left: 25%;
-    position: absolute;
-    z-index: 0;
+}
+
+@media screen and (max-width: 518px) {
+  .top-title {
+    font-size: 25px;
   }
-  &_four {
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: 0;
+  .btn-cool-blues,.btn-green-moon,.btn-orange-moon {
+    font-size: 15px;
   }
-  &_five {
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    z-index: 0;
-  }
-  &_six {
-    top: 10%;
-    right: 0;
-    position: absolute;
-    z-index: 0;
+}
+
+@media screen and (max-width: 1200px) {
+  .top-image_one,.top-image_two,.top-image_three,.top-image_four,.top-image_five,.top-image_six {
+    display: none;
   }
 }
