--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -71,6 +71,11 @@ input {
   }
   &-content {
     background-color: rgba(236, 236, 206,0.4);
+    min-height: 600px;
+    &-fcs {
+      background-color: rgba(236, 236, 206,0.4);
+      min-height: 780px;
+    }
   }
   &-user {
     font-size: 15px;
@@ -91,30 +96,19 @@ input {
   }
 }
 
-.good,.good-after {
-  background-color: white;
-  border: 2px solid white;
-  color: #C0C0C0;
-}
-
-.good:hover + .fukidashi {
-  display: block;
-}
-
-.game-article {
-  position: relative;
-  height: 100%;
-}
-
-// @media screen and (max-width: 650px) {
-// }
 
 @media screen and (max-width: 620px) {
   .choose-btn {
     display: grid;
     text-align: center;
   }
-          .user_name {
-            margin-top: 0;
-          }
+  .user_name {
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 342px) {
+  .comment_delete-button {
+    display: block;
+  }
 }
