--- a/app/views/tweets/search.html.erb
+++ b/app/views/tweets/search.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 <% @tweets.each do |tweet|%>
   <%= link_to tweet do %>
-  <div class="article">
+  <div class="article mt-5">
     <div class="article-title">
       <%= tweet.school_a.name %>
       vs
