--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -34,7 +34,7 @@
   background-size: cover;
   background-color:rgba(255,255,255,0.5);
   background-blend-mode:lighten;
-  height: 900px;
+  min-height: 1100px;
   flex: 1 1 100%;
 }
 
