--- a/app/views/forecasts/_forecasts.html.erb
+++ b/app/views/forecasts/_forecasts.html.erb
@@ -6,8 +6,8 @@
   <% end %>
 </div>
 <% @forecasts.each do |forecast| %>
-  <%= link_to forecast do %>
   <div class="forecast mt-5">
+  <%= link_to forecast do %>
     <div class="school-fcs">
       <div class="win-school_fs">
         <p>勝利予想<p>
@@ -33,3 +33,4 @@
   </div>
   <% end %>
 <% end %>
+<%= paginate @forecasts %>
