--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -28,7 +28,7 @@
       </div>
     </div>
   </div>
-  <div class="contact-sent">
+  <div class="contact-sent mb-5">
     <%= f.submit "確認画面へ",class: "btn btn-warning" %>
     <%= link_to 'javascript:history.back()',class: "btn btn-primary active" do %>
       戻る
