--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -39,7 +39,7 @@
     <%= javascript_pack_tag 'forecast' %>
   </div>
 <%# コメント %>
-   <div class="comment-content-fcs">
+   <div class="comment-content">
     <div class="comment">   
       <div class="text-format mt-5 mb-4 text-warning">
       <i class="fa fa-baseball-ball text-warning"></i>
