詳細ページ　大会名の余白

--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -165,3 +165,10 @@
   position: relative;
   height: 100%;
 }
+
+.game_result {
+  font-size: 30px;
+  text-align: center;
+  padding-top: 30px;
+  margin-top: 30px;
+}
