--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: "/tweets/header"%>
+<%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %>
 <div class="top-main">
   <div id="app">
     <div v-show="show">
