--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -1,4 +1,4 @@
-<div class="main-content pt-2">
+<div class="main-content">
   <div class="wrap">
     <%= render partial: "slide/slide"%>
     <div class="center">
