--- a/app/views/forecasts/new.html.erb
+++ b/app/views/forecasts/new.html.erb
@@ -2,14 +2,15 @@
   <div class="form p-4">
     <%= form_with model: @forecast,local: true do |f| %>
       <%= render 'layouts/error_messages_fcs', model: f.object %>
-    <%=f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]},selected: @forecast.tournament_id),{include_blank:"大会を選択してください"}, { class: "parent_category_box", id: "parent_category_forecast"} %>
-    <div class="win-school mt-3"></div>
-    <div class="lose-school mt-3"></div>
-    <div class="win-rate mt-5">
-      <%= f.select :probability,[["60%",60],["70%",70],["80%",80],["90%",90],["100%",100]],include_blank: "勝利予想チームの勝利確率"%>
-    </div>
-    <%= f.text_area :text,cols: 30,rows: 10,placeholder: "予想内容を入力してください",value: "#{@forecast.text}"%>
-    <%=f.submit value: "SENT",class: "game_record"%>
+      <%=f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]},selected: @forecast.tournament_id),{include_blank:"大会を選択してください"}, { class: "parent_category_box", id: "parent_category_forecast"} %>
+      <div class="win-school mt-3"></div>
+      <div class="lose-school mt-3 mb-5"></div>
+      <%= f.select :round,[["1回戦","1回戦"],["2回戦","2回戦"],["3回戦","3回戦"],["準々決勝","準々決勝"],["準決勝","準決勝"],["決勝","決勝"]] %>
+      <div class="win-rate mt-5">
+        <%= f.select :probability,[["60%",60],["70%",70],["80%",80],["90%",90],["100%",100]],include_blank: "勝利予想チームの勝利確率"%>
+      </div>
+      <%= f.text_area :text,cols: 30,rows: 10,placeholder: "予想内容を入力してください",value: "#{@forecast.text}"%>
+      <%=f.submit value: "SENT",class: "game_record"%>
     <% end %>
     <div class="back">
       <%= link_to "戻る",analyses_path %>
