--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -15,6 +15,7 @@
       <%= @forecast.tournament.name%><br>
       <i class="fas fa-fire mt-5">試合予想</i>
     </div>
+    <div class="text-format"><%= @forecast.round%></div>
     <div class="school-fcs">
       <div class="win-school text-danger">
         <p>勝利予想<p>
