--- a/app/views/forecasts/_forecasts.html.erb
+++ b/app/views/forecasts/_forecasts.html.erb
@@ -8,6 +8,9 @@
 <% @forecasts.each do |forecast| %>
   <div class="forecast mt-5">
   <%= link_to forecast do %>
+    <div class="text-format mt-1 font-weight-normal">
+      <%= forecast.round%>
+    </div>
     <div class="school-fcs">
       <div class="win-school_fs">
         <p>勝利予想<p>
