優勝校　DB保存

--- a/app/views/champions/new.html.erb
+++ b/app/views/champions/new.html.erb
@@ -7,7 +7,7 @@
       <%=f.submit value: "SENT",class: "game_record"%>
     <% end %>
     <div class="back">
-      <%= link_to "戻る",champions_path %>
+      <%= link_to "戻る",:back %>
     </div>
   </div>
 </div>
